feat: MediaType icons, Uploader
ui:

ResourceThumbnail:
-mediaType icons
  - uses (fontawesome) icons
  - styled for grid and miniature layouts
- statusIcon (uploading+privacy)

Uploader:
- title from filename while uploading
- upload hints
- unify boxes, set title
- link to unpublished_entries, active if no uploads
- disabled: force miniature layout if more than 20 items
- fix: better handle errors
- fix: honor RELATIVE_URL_ROOT

MediaResourcesBox:
- add props:
  - fallback: (bool to toggle, or can be content node)
- heading (title of toolbar)
  - add public method setLayout
  - fix pagination

presenters:
- remove `generic_thumbnail`s, also deduplicate some code
- MediaEntryCommon: title from filename

--- a/app/assets/stylesheets/combos/_ui-resources-common.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-common.sass
@@ -68,9 +68,8 @@
   border-width: 0 1px 1px 0
   display: block
   z-index: 10
-  .icon-privacy-open,
-  .icon-privacy-private,
-  .icon-privacy-group
+  // icons:
+  i
     position: relative
     color: $mono-strong
     margin-left: 3px
