--- a/app/assets/stylesheets/combos/_ui-resources-miniature.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-miniature.sass
@@ -115,3 +115,12 @@
   .ui-resources.miniature
     .ui-thumbnail.video .ui-thumbnail-image-wrapper
       background: $white image-url("backgrounds/thumb-video-backg-small-projct.png") 0 0px no-repeat
+
+
+// v3 Additions:
+.ui-resources.miniature
+  .ui-thumbnail
+    // support media type icons (behind or instead <img>)
+    .ui_media-type-icon
+      font-size: 20px
+      top: 8px
