--- a/app/assets/stylesheets/general/_typography.sass
+++ b/app/assets/stylesheets/general/_typography.sass
@@ -3,7 +3,9 @@
  * ## Typography
  *
 
+// TODO: serve as assets, don't import from third parties
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:400,600,700")
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css")
 
 body
   color: $mono-dark
