fix: performance bug dashboard header

--- a/app/views/my/_section_keywords.html.haml
+++ b/app/views/my/_section_keywords.html.haml
@@ -1,5 +1,5 @@
 :ruby
-  keywords = lget.used_keywords.map do |keyword|
+  keywords = get.used_keywords.map do |keyword|
     { text: keyword.label, link: keyword.url }
   end
 
