--- a/app/views/my/new_collection.haml
+++ b/app/views/my/new_collection.haml
@@ -1,1 +1,1 @@
-= render template: 'my/dashboard', locals: { hashget: @get, lget: @get.hash[:user_dashboard], atget: @get.hash[:user_dashboard], showModal: true }
+= render template: 'my/dashboard'
