--- a/app/views/my/_section_groups.html.haml
+++ b/app/views/my/_section_groups.html.haml
@@ -4,7 +4,7 @@
     internal: t(:internal_groups),
     external: t(:external_groups)
   }.map do |type, label|
-    groups = lget.groups.send(type).map {|lget| { text: lget.name, href: lget.url } }
+    groups = get.groups.send(type).map {|get| { text: get.name, href: get.url } }
     [type, { label: label, list: groups }]
   end.to_h
 
