fix: explore: feature-toggle(!), routes, resiliance

--- a/app/assets/stylesheets/combos/_ui-home-claim.sass
+++ b/app/assets/stylesheets/combos/_ui-home-claim.sass
@@ -3,7 +3,7 @@
  *
  * Styleguide 7.11
 
-.ui-home-claim
+.ui-home-claim, .ui-home-claim-simple
   +border-radius($border-radius-m)
   +box-shadow(0 1px 3px $darken-more)
   background: $lighten-strong
