--- a/app/ui_elements/combos/home-claim.haml
+++ b/app/ui_elements/combos/home-claim.haml
@@ -2,7 +2,7 @@
   throw 'ui: missing title!' unless claim && claim[:title]
   throw 'ui: missing login!' unless login
 
-.ui-home-claim.ui-container
+.ui-home-claim-simple.ui-container
   .col2of3
     .pitch-claim
       %h1.title-xxl
