--- a/app/views/application/root.html.haml
+++ b/app/views/application/root.html.haml
@@ -1,9 +1,31 @@
 :ruby
-  home_claim = {
-    claim: {
-      title: settings.welcome_title,
-      text: settings.try(:welcome_text).presence
-    }
-  }
+  if @feature_toggle_new_explore
 
-= react('Views.explore.ExploreLoginPage', get: @get)
+    home_claim = {
+      claim: {
+        title: settings.welcome_title,
+        text: settings.try(:welcome_text).presence
+      }
+    }
+
+  else
+
+    home_claim = {
+      claim: {
+        title: settings.welcome_title,
+        text: settings.try(:welcome_text).presence
+      },
+      login: render(partial: 'login_box')
+    }
+
+  end
+
+
+- if @feature_toggle_new_explore
+
+  = react('Views.explore.ExploreLoginPage', get: @get)
+
+- else
+
+  .ui-container.pal
+    = combo('home-claim', home_claim)
