ui: reactify view MediaEntry#show (main tab)
- first step of porting the complete view
- still needs porting of Tabs and Header

---

- feat: autolink MetaDatumText

- fix: cleanup CollectionShow

- presenter: MetaData lists are always arrays!

- deco: MetaDatumValues
- deco: MetaDataList (dl or table types)

--- a/app/views/media_entries/more_data.html.haml
+++ b/app/views/media_entries/more_data.html.haml
@@ -16,16 +16,17 @@
         ]
       = combo('metadata-box', mods: 'ui-summary-table', list: more_meta_data_list)
 
+  .col2of3
+    .ui-container.plm
+      %h3.title-l.separated.mbm= t(:media_entry_all_metadata_title)
+      = react('Deco.MetaDataByListing', list: @get.meta_data.by_vocabulary)
+
       %h3.title-l.separated.mvm
         = t(:media_entry_file_information_title)
       = combo('metadata-box',
           mods: 'ui-summary-table', list: @get.more_data.file_information)
 
-  .col2of3
-    .ui-container.plm
 
-      %h3.title-l.separated.mbm= t(:media_entry_all_metadata_title)
-      = deco('resource_meta_data', meta_data: @get.meta_data.by_vocabulary)
 
 
 = render template: 'media_entries/_show/_base'
