feature: batch edit meta data async

--- a/app/views/media_entries/edit_context_meta_data.html.haml
+++ b/app/views/media_entries/edit_context_meta_data.html.haml
@@ -1,1 +1,1 @@
-= react('Deco.ResourceMetaDataPagePerContext', get: @get)
+= react('Deco.ResourceMetaDataPagePerContext', {get: @get, batch: false})
