--- a/app/views/media_entries/batch_edit_meta_data.html.haml
+++ b/app/views/media_entries/batch_edit_meta_data.html.haml
@@ -1,11 +1,1 @@
-- content_for(:header) do
-  = component('page-header',
-      icon: component('icon.pen'),
-      text: t(:batch_meta_data_edit, media_entry_count: @get.batch_entries.length),
-      actions: nil)
-
-- content_for(:overview) do
-  = react('Deco.ResourcesBatchBox', get: @get)
-  = react('Deco.BatchResourceMetaDataForm', get: @get)
-
-= render template: 'layouts/app_resource'
+= react('Deco.BatchResourceMetaDataPage', {get: @get})
