--- a/app/views/application/_user_menu.haml
+++ b/app/views/application/_user_menu.haml
@@ -1,17 +1,1 @@
--# Will show the full user menu later as js-dropdown
-  , for now only a non-js logout button
-
-  :ruby
-    dropdown = {
-      id: 'user_menu',
-      mods: 'stick-right',
-      text: user.login, # FIXME: user.fullname ???,
-      # list: [] # TODO: js
-    }
-
-  = component('dropdown', dropdown) # TODO: (see component)
-
-= form_tag sign_out_path do
-  = component('button.tertiary') do
-    = component('icon.power-off')
-    = t(:user_menu_logout_btn)
+= react('App.UserMenu', @app_layout_data.user_menu)
