ui: ResourcesBox: actions menu
- dropdown with all batch actions - like menu from clipboard in v2
- refactor
- box: init collection/models

--- a/app/assets/stylesheets/general/_typography.sass
+++ b/app/assets/stylesheets/general/_typography.sass
@@ -146,3 +146,13 @@ ul.inline li:last-child
 ol li
   list-style-type: decimal
   list-style-position: inside
+
+// // MenuCounter
+//
+.ui-count
+  color: $mono-mid
+  font-size: 10px
+  font-weight: 700
+  line-height: 1
+  padding: $space-x
+  text-align: center
