views: search results: Entries/Sets switcher
- template: ResourceBoxWithSwitch
- views: entries/index, sets/index

- simple version, link only
- link to sets removes filter!
- make box sidefilter work 'search' only

--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -2,4 +2,4 @@
     icon: component('icon.media-entry'),
     text: t(:sitemap_collections))
 
-= react('Deco.MediaResourcesBox', get: @get, withBox: true, saveable: true)
+= react('Views.Collection.Index', get: @get, for_url: request.original_fullpath)
