--- a/app/views/media_entries/index.html.haml
+++ b/app/views/media_entries/index.html.haml
@@ -2,4 +2,4 @@
     icon: component('icon.media-entry'),
     text: t(:sitemap_entries))
 
-= react('Deco.MediaResourcesBox', get: @get, withBox: true, saveable: true)
+= react('Views.MediaEntry.Index', get: @get, for_url: request.original_fullpath)
