--- a/app/views/media_entries/select_collection.html.haml
+++ b/app/views/media_entries/select_collection.html.haml
@@ -1,3 +1,3 @@
-- content_for(:header) { react('Views.MediaEntryHeader', { get: @get, showModal: true, async: false, modalAction: 'select_collection' }) }
+- content_for(:header) { react('Views.MediaEntryHeader', { get: @get.header, showModal: true, async: false, modalAction: 'select_collection' }) }
 
 = render template: 'media_entries/show'
