--- a/app/views/media_entries/_show/_tab_nav.haml
+++ b/app/views/media_entries/_show/_tab_nav.haml
@@ -13,7 +13,7 @@
 
 %ul.ui-tabs.large
   - tabs.each do |path, tab|
-    %li.ui-tabs-item{class: link_active?(path, true) ? 'active' : nil}
+    %li.ui-tabs-item{class: link_active?(path, deep: true) ? 'active' : nil}
       %a{href: path}
         = tab[:icon]
         = tab[:title]
