ui: lib: use Dropdown etc from react-bootstrap
most simple version, internally works as before
also some style fixes (polishing only, styles were already adapted to work with bootstrap components)

---

Revert "fix: close dropdown when clicking aside"
This reverts commit 6355326d3190a4dffce763244b4668e0b928bf1c.

--- a/app/assets/stylesheets/general/_buttons.sass
+++ b/app/assets/stylesheets/general/_buttons.sass
@@ -27,7 +27,7 @@ a.weak
     color: $mono-dark
     text-decoration: none
 
-a.disabled, a[disabled]
+a.disabled, a[disabled], .disabled a, [disabled] a
   color: $mono-mid !important
 
 a:active
@@ -105,15 +105,15 @@ a:active
   line-height: $line-height-xl
   min-height: 37px
 
-.button.disabled, .button[disabled],
-.button.disabled:hover, .button[disabled]:hover,
-  +background-image(linear-gradient(darken($mono-bright, 10%), darken($mono-weak, 10%)))
-  +single-text-shadow(false, 1px, 0, false, $lighten)
-  border-color: darken($mono-light, 5%)
-  color: $mono-mid
-  cursor: default
-  &:active
-    +box-shadow(none)
+.button.disabled, .button[disabled], [disabled] .button, .disabled .button
+  &, &:hover
+    +background-image(linear-gradient(darken($mono-bright, 10%), darken($mono-weak, 10%)))
+    +single-text-shadow(false, 1px, 0, false, $lighten)
+    border-color: darken($mono-light, 5%)
+    color: $mono-mid
+    cursor: default
+    &:active
+      +box-shadow(none)
 
 /* Icons within buttons
  *-----------------------------------------
@@ -124,7 +124,7 @@ a:active
 
 .button:active i,
 .button.active i,
-.button.disabled i
+.button.disabled i, .button[disabled] i, [disabled] .button i, .disabled .button i
   opacity: 0.5
 
 .button i.small
