--- a/app/assets/stylesheets/components/_ui-drop-menus.sass
+++ b/app/assets/stylesheets/components/_ui-drop-menus.sass
@@ -95,6 +95,13 @@
     +box-shadow(inset 0 1px 2px $darken)
     background: $darken-less
     color: $mono-dark
+.ui-drop-item.disabled a,
+.ui-drop-item.disabled button
+  &:hover, &:active
+    background: inherit
+    color: inherit
+    text-decoration: inherit
+    +box-shadow(inherit)
 
 .ui-drop-item:first-child a,
 .ui-drop-item:first-child button
