chore: serve all webfonts
- no external assets anymore
- also some cleanup

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -27,7 +27,7 @@
 /* Load fonts
  *-----------------------------------------
 
-@import ../fonts/madek-icon-font/style
+@import 'fonts'
 
 /* Basic elements
  *-----------------------------------------
