fix: explore css

--- a/app/views/explore/catalog.html.haml
+++ b/app/views/explore/catalog.html.haml
@@ -1,2 +1,2 @@
 - content_for(:app_body) do
-  = react('Views.explore.ExploreMainPage', get: @get)
+  = react('Views.explore.ExploreMainPage', get: @get, showThumbDesc: true)
