--- a/app/views/media_entries/_show/_tab_nav.haml
+++ b/app/views/media_entries/_show/_tab_nav.haml
@@ -1,6 +1,6 @@
 :ruby
-  tabs = @get.tabs.map do |id, tab|
-    path = id ? send("#{id}_media_entry_path") : media_entry_path
+  tabs = @get.tabs.map do |tab|
+    path = tab[:action] ? send("#{tab[:action]}_media_entry_path") : media_entry_path
 
     icon = case tab[:icon_type]
            when :privacy_status_icon
