--- a/app/views/collections/select_collection.html.haml
+++ b/app/views/collections/select_collection.html.haml
@@ -1,1 +1,1 @@
-= react('Views.CollectionShow', { activeTab: 0, get: @get, showModal: true })
+= react('Views.CollectionShow', { get: @get, showModal: true })
