fix: ui: collection show: only show allowed tabs
- fixed: filtering tabs by action policy (was broken by last fix)
- fixed: policies for tab actions (filtering had no effect before)
- fixed: add a test for the filtering by policy
- changed: set active tab in client, based on URL (will work with router as is)

--- a/app/views/media_entries/index.html.haml
+++ b/app/views/media_entries/index.html.haml
@@ -2,4 +2,4 @@
     icon: component('icon.media-entry'),
     text: t(:sitemap_entries))
 
-= react('Views.MediaEntry.Index', get: @get, for_url: request.original_fullpath)
+= react('Views.MediaEntry.Index', get: @get)
