--- a/app/views/my/_section_keywords.html.haml
+++ b/app/views/my/_section_keywords.html.haml
@@ -3,7 +3,7 @@
     { text: keyword.label, link: keyword.url, count: keyword.usage_count }
   end
 
-.ui-container.pal
+.ui-container.pbh{ :style => "padding-top: 15px;" }
   - if keywords.empty?
     = t(:no_keywords_fallback)
   - else
