fix: keywords, login page and groups
- login page: fix thumbnail description
- groups: ordering and count
- keywords: layout and count

--- a/app/views/my/_section_groups.html.haml
+++ b/app/views/my/_section_groups.html.haml
@@ -1,11 +1,12 @@
 - # Only shown on the dashboard "index"! This is NOT the 'Groups' index!!!
 :ruby
+  binding.pry
   group_types = { # config:
     internal: t(:internal_groups),
     external: t(:external_groups)
   }.map do |type, label|
-    groups = get.groups.send(type).map {|get| { text: get.name, href: get.url } }
-    [type, { label: label, list: groups }]
+    groups = get.groups.send(type).map {|get| { text: 'abc', href: get.url } }
+    [type, { label: 'abc', list: groups }]
   end.to_h
 
 .ui-container.pbl
