--- a/app/views/my/groups/index.html.haml
+++ b/app/views/my/groups/index.html.haml
@@ -36,7 +36,7 @@
       }.map do |group_type, group|
         group[:list] = group[:list].map do |group|
           [group.uuid, {
-            name: component('tag-button.group', text: group.name, href: group.url
+            name: component('tag-button.group', text: group.detailed_name, href: group.url
             ),
             resources: {
               count: group.entrusted_media_resources_count,
