fix: disable batch edit permissions for drafts

--- a/app/views/my/_section_media_resources.html.erb
+++ b/app/views/my/_section_media_resources.html.erb
@@ -17,7 +17,8 @@ if !render_async
       mods: mods,
       withBox: with_box,
       fallback: fallback,
-      initial: { show_filter: false })
+      initial: { show_filter: false },
+      disablePermissionsEdit: section[:id] == :unpublished_entries)
 
 else
   react(
