--- a/app/assets/stylesheets/components/_ui-selected-resource.sass
+++ b/app/assets/stylesheets/components/_ui-selected-resource.sass
@@ -2,3 +2,8 @@
   .ui-thumbnail-image-wrapper
     border-color: $blue !important
     @include box-shadow(0 0 8px $blue !important)
+
+.ui-resource.ui-selected
+  .ui-tile__thumbnail
+    border-color: $blue !important
+    @include box-shadow(0 0 8px $blue !important)
