React: render-Root (client/server), Router, Layout
ui/react:
add render Root
server-side: render components by URL + props
client-side: re-mount components with router

controllers: `respond_with_react`

supports rendering a react component
directly from the controller,
bypassing the Rails view stack.

Layout:

migrate main components from AppLayput to React,
and reuse them in existing layout,
to minimize duplication.

removed browserify smokescreen test, not needed anymore

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -237,3 +237,10 @@ body[data-r="media_entries"][data-a="embedded"]
   height: 100%
   width: 100%
   min-width: initial
+
+// React Root fixes
+
+// when wrapping ".app", height must be set for the layout (footer) to work
+[data-react-class="UI.Root"]
+  &, & [data-reactroot]
+    height: 100%
