fix: ui: PermissionsEdit: fullwidth inputs
also fixes navigating directly to /edit
(edge case as there is no navigation for it)

--- a/app/assets/stylesheets/components/_ui-autocomplete.sass
+++ b/app/assets/stylesheets/components/_ui-autocomplete.sass
@@ -59,7 +59,7 @@
     @extend a.ui-state-focus
 
 // overwrite typeahead inline styles :/
-.multi-select-input-holder
-  .ui-autocomplete-holder
-    position: initial !important
-    display: initial !important
+.ui-autocomplete-holder
+  position: initial !important
+  display: initial !important
+  width: 100%
