feat: ui: AutoComplete: style existing values

--- a/app/assets/stylesheets/components/_ui-autocomplete.sass
+++ b/app/assets/stylesheets/components/_ui-autocomplete.sass
@@ -63,3 +63,8 @@
   position: initial !important
   display: initial !important
   width: 100%
+
+// custom: we set some results/suggestions as disabled (existing values)
+.ui-autocomplete-disabled
+  color: $mono-mid
+  font-style: italic
