--- a/app/views/media_entries/relations.html.haml
+++ b/app/views/media_entries/relations.html.haml
@@ -1,5 +1,5 @@
 - content_for(:title_head) { @get.title }
 - content_for(:main) do
-  = react('Views.Collection.Relations', get: @get)
+  = react('Views.MediaEntry.Relations', get: @get)
 
 = render template: 'media_entries/_show/_base_tmp_react'
