feat: *beta* ActivityStream / dashboard timeline
first version of User Timeline in dashboard
shows activity of last day and fetches up to 500 events past.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -55,6 +55,7 @@
  *-----------------------------------------
 
 @import components/ui-actions
+@import components/ui-activity-stream
 @import components/ui-alerts
 @import components/ui-body-title
 @import components/ui-containers
