--- a/app/views/my/_sidebar.html.haml
+++ b/app/views/my/_sidebar.html.haml
@@ -11,6 +11,11 @@
       %li.ui-side-navigation-item{class: link_active?(link) ? 'active' : nil}
 
         %a{href: link, class: section[:is_empty?] ? 'weak' : 'strong'}
+          - if section[:is_beta]
+            %em{style: 'font-style: italic; font-weight: normal;'}
+              = 'Beta:'
+
           = section[:title]
+
       - unless (section_id == sections.keys.last)
         %li.separator.mini
