feature: collection batch meta data edit

--- a/app/views/media_entries/batch_edit_context_meta_data.html.haml
+++ b/app/views/media_entries/batch_edit_context_meta_data.html.haml
@@ -1,1 +1,1 @@
-= react('Deco.ResourceMetaDataPagePerContext', {get: @get, batch: true})
+= react('Deco.ResourceMetaDataPagePerContext', {get: @get, batch: true, batchType: 'MediaEntry'})
