--- a/app/views/media_entries/batch_edit_meta_data.html.haml
+++ b/app/views/media_entries/batch_edit_meta_data.html.haml
@@ -1,1 +1,1 @@
-= react('Views.batch.BatchResourceMetaData', {get: @get})
+= react('Views.batch.BatchResourceMetaData', {get: @get, batchType: 'MediaEntry'})
